--- a/config/2025/config.json
+++ b/config/2025/config.json
@@ -1,191 +1,86 @@
 {
   "$schema": "https://frc2713.github.io/QRScout/schema.json",
   "title": "QRScout",
-  "page_title": "Team 8114 -- Rebuilt 2026",
+  "page_title": "Rebuilt Team 8114 -- 2026",
   "delimiter": "\t",
   "teamNumber": 8114,
+
   "sections": [
 
     {
       "name": "Prematch",
       "fields": [
-        {
-          "title": "Scouter Initials",
-          "type": "text",
-          "required": true,
-          "code": "scouter",
-          "defaultValue": "",
-          "formResetBehavior": "preserve"
+        { "title": "Scouter Initials", "type": "text", "required": true, "code": "scouter", "defaultValue": "" },
+        { "title": "Match Number", "type": "number", "required": true, "code": "matchNumber", "defaultValue": 1 },
+        { "title": "Robot", "type": "select", "required": true, "code": "robot",
+          "choices": { "R1": "Red 1", "R2": "Red 2", "R3": "Red 3", "B1": "Blue 1", "B2": "Blue 2", "B3": "Blue 3" }
         },
-        {
-          "title": "Match Number",
-          "type": "number",
-          "required": true,
-          "code": "matchNumber",
-          "defaultValue": 1,
-          "formResetBehavior": "increment"
-        },
-        {
-          "title": "Robot",
-          "type": "select",
-          "required": true,
-          "code": "robot",
-          "defaultValue": "R1",
+        { "title": "Team Number", "type": "number", "required": true, "code": "teamNumber", "defaultValue": 0 },
+        { "title": "Starting Position", "type": "select", "required": true, "code": "startPos",
           "choices": {
-            "R1": "Red 1",
-            "R2": "Red 2",
-            "R3": "Red 3",
-            "B1": "Blue 1",
-            "B2": "Blue 2",
-            "B3": "Blue 3"
-          },
-          "formResetBehavior": "preserve"
-        },
-        {
-          "title": "Team Number",
-          "type": "number",
-          "required": true,
-          "code": "teamNumber",
-          "defaultValue": 0,
-          "min": 0,
-          "max": 19999
-        },
-        {
-          "title": "Starting Position",
-          "type": "select",
-          "required": true,
-          "code": "Prsp",
-          "defaultValue": "",
-          "choices": {
-            "LT": "Left Trench",
-            "LB": "Left Bump",
+            "OT": "Outpost Trench",
+            "OB": "Outpost Bump",
             "H": "Hub",
-            "RB": "Right Bump",
-            "RT": "Right Trench"
+            "DB": "Depot Bump",
+            "DT": "Depot Trench"
           }
         },
-        {
-          "title": "No Show",
-          "type": "boolean",
-          "required": false,
-          "code": "noShow",
-          "defaultValue": false
-        }
+        { "title": "No Show", "type": "boolean", "required": false, "code": "noShow", "defaultValue": false }
       ]
     },
 
     {
       "name": "Autonomous",
       "fields": [
-        { "title": "Scored Preload", "type": "boolean", "required": false, "code": "ASPre", "defaultValue": false },
-        { "title": "Depot", "type": "boolean", "required": false, "code": "ADep", "defaultValue": false },
-        { "title": "Outpost", "type": "boolean", "required": false, "code": "AOut", "defaultValue": false },
-        { "title": "Collected from Neutral Zone", "type": "boolean", "required": false, "code": "ACNZ", "defaultValue": false },
-        { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "AHS", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Human Player Scored", "type": "counter", "required": false, "code": "AHPS", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Autonomous L1 Climb", "type": "boolean", "required": false, "code": "AClimb", "defaultValue": false }
+        { "title": "Score Preload", "type": "boolean", "code": "preload", "defaultValue": false },
+        { "title": "Depot", "type": "boolean", "code": "autonDepot", "defaultValue": false },
+        { "title": "Outpost", "type": "boolean", "code": "autonOutpost", "defaultValue": false },
+        { "title": "Collects from Neutral Zone", "type": "boolean", "code": "collectNZ", "defaultValue": false },
+        { "title": "Hoppers Scored", "type": "counter", "code": "autonHoppers", "defaultValue": 0, "min": 0 },
+        { "title": "Climb (L1)", "type": "boolean", "code": "autonClimb", "defaultValue": false },
+        { "title": "Crossed Lanes", "type": "boolean", "code": "autonCrossLanes", "defaultValue": false },
+        { "title": "Won Auton?", "type": "boolean", "code": "wonAuto", "defaultValue": false }
       ]
     },
 
     {
       "name": "Transition",
       "fields": [
-        { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "THS", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Depot", "type": "boolean", "required": false, "code": "TDep", "defaultValue": false },
-        { "title": "Outpost", "type": "boolean", "required": false, "code": "TOut", "defaultValue": false },
-        { "title": "Passes Fuel from Neutral Zone", "type": "counter", "required": false, "code": "TPFNZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Passes Fuel from Opposing Alliance Zone", "type": "counter", "required": false, "code": "TPFOAZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Plays Defense in Neutral Zone", "type": "boolean", "required": false, "code": "TDefNZ", "defaultValue": false },
-        { "title": "Plays Defense in Alliance Zone", "type": "boolean", "required": false, "code": "TDefAZ", "defaultValue": false }
+        { "title": "Hoppers Scored", "type": "counter", "code": "transHoppers", "defaultValue": 0, "min": 0 },
+        { "title": "Depot", "type": "boolean", "code": "transDepot", "defaultValue": false },
+        { "title": "Outpost", "type": "boolean", "code": "transOutpost", "defaultValue": false },
+        { "title": "Pass from Neutral Zone", "type": "counter", "code": "transPassNZ", "defaultValue": 0, "min": 0 },
+        { "title": "Crosses Bump", "type": "counter", "code": "transCrossBump", "defaultValue": 0, "min": 0 },
+        { "title": "Crosses Trench", "type": "counter", "code": "transCrossTrench", "defaultValue": 0, "min": 0 },
+        { "title": "Plays Defense in Alliance Zone", "type": "boolean", "code": "transDefAlliance", "defaultValue": false },
+        { "title": "Plays Defense in Neutral Zone", "type": "boolean", "code": "transDefNeutral", "defaultValue": false }
       ]
     },
 
     {
-      "name": "Shift 1",
+      "name": "Shifts",
       "fields": [
-        {
-          "title": "Alliance Advantage",
-          "type": "select",
-          "required": false,
-          "code": "S1AA",
-          "defaultValue": "",
-          "choices": { "Red": "Red", "Blue": "Blue" }
-        },
-        { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "S1HS", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Passes Fuel from Neutral Zone", "type": "counter", "required": false, "code": "S1PFNZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Passes Fuel from Opposing Alliance Zone", "type": "counter", "required": false, "code": "S1PFOAZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Plays Defense in Neutral Zone", "type": "boolean", "required": false, "code": "S1DefNZ", "defaultValue": false },
-        { "title": "Plays Defense in Alliance Zone", "type": "boolean", "required": false, "code": "S1DefAZ", "defaultValue": false }
-      ]
-    },
-
-    {
-      "name": "Shift 2",
-      "fields": [
-        { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "S2HS", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Passes Fuel from Neutral Zone", "type": "counter", "required": false, "code": "S2PFNZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Passes Fuel from Opposing Alliance Zone", "type": "counter", "required": false, "code": "S2PFOAZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Plays Defense in Neutral Zone", "type": "boolean", "required": false, "code": "S2DefNZ", "defaultValue": false },
-        { "title": "Plays Defense in Alliance Zone", "type": "boolean", "required": false, "code": "S2DefAZ", "defaultValue": false }
-      ]
-    },
-
-    {
-      "name": "Shift 3",
-      "fields": [
-        { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "S3HS", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Passes Fuel from Neutral Zone", "type": "counter", "required": false, "code": "S3PFNZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Passes Fuel from Opposing Alliance Zone", "type": "counter", "required": false, "code": "S3PFOAZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Plays Defense in Neutral Zone", "type": "boolean", "required": false, "code": "S3DefNZ", "defaultValue": false },
-        { "title": "Plays Defense in Alliance Zone", "type": "boolean", "required": false, "code": "S3DefAZ", "defaultValue": false }
-      ]
-    },
-
-    {
-      "name": "Shift 4",
-      "fields": [
-        { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "S4HS", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Passes Fuel from Neutral Zone", "type": "counter", "required": false, "code": "S4PFNZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Passes Fuel from Opposing Alliance Zone", "type": "counter", "required": false, "code": "S4PFOAZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Plays Defense in Neutral Zone", "type": "boolean", "required": false, "code": "S4DefNZ", "defaultValue": false },
-        { "title": "Plays Defense in Alliance Zone", "type": "boolean", "required": false, "code": "S4DefAZ", "defaultValue": false }
+        { "title": "Hoppers Scored", "type": "counter", "code": "shiftHoppers", "defaultValue": 0, "min": 0 },
+        { "title": "Pass from Neutral Zone", "type": "counter", "code": "shiftPassNZ", "defaultValue": 0, "min": 0 },
+        { "title": "Crosses Bump", "type": "counter", "code": "shiftCrossBump", "defaultValue": 0, "min": 0 },
+        { "title": "Crosses Trench", "type": "counter", "code": "shiftCrossTrench", "defaultValue": 0, "min": 0 },
+        { "title": "Plays Defense in Alliance Zone", "type": "boolean", "code": "shiftDefAlliance", "defaultValue": false },
+        { "title": "Plays Defense in Neutral Zone", "type": "boolean", "code": "shiftDefNeutral", "defaultValue": false },
+        { "title": "Teleop Passing Effectiveness", "type": "range", "code": "passEffect", "defaultValue": 3, "min": 1, "max": 5 }
       ]
     },
 
     {
       "name": "Endgame",
       "fields": [
-        { "title": "Hoppers Scored", "type": "counter", "required": false, "code": "EGHS", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Passes Fuel from Neutral Zone", "type": "counter", "required": false, "code": "EGPFNZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Passes Fuel from Opposing Alliance Zone", "type": "counter", "required": false, "code": "EGPFOAZ", "defaultValue": 0, "min": 0, "step": 1 },
-        { "title": "Plays Defense in Neutral Zone", "type": "boolean", "required": false, "code": "EGDefNZ", "defaultValue": false },
-        { "title": "Plays Defense in Alliance Zone", "type": "boolean", "required": false, "code": "EGDefAZ", "defaultValue": false },
-        {
-          "title": "Climb",
-          "type": "select",
-          "required": false,
-          "code": "EGClimb",
-          "defaultValue": "",
-          "choices": {
-            "None": "No Climb",
-            "L1": "Level 1",
-            "L2": "Level 2",
-            "L3": "Level 3",
-            "L4": "Level 4"
-          }
+        { "title": "Climb Level", "type": "select", "code": "climbLevel",
+          "choices": { "None": "None", "L1": "L1", "L2": "L2", "L3": "L3", "L4": "L4" }
         },
-        {
-          "title": "Climb Position",
-          "type": "select",
-          "required": false,
-          "code": "EGClimbPos",
-          "defaultValue": "",
+        { "title": "Climb Position", "type": "select", "code": "climbPos",
           "choices": {
-            "OL": "Outside Left",
-            "FL": "Front Left",
-            "C": "Center",
-            "FR": "Front Right",
-            "OR": "Outside Right"
+            "Outpost": "Outpost Side",
+            "Center": "Center",
+            "Depot": "Depot Side"
           }
         }
       ]
@@ -194,24 +89,36 @@
     {
       "name": "Postmatch",
       "fields": [
-        {
-          "title": "Balls per Hopper",
-          "type": "select",
-          "required": false,
-          "code": "BPH",
-          "defaultValue": "",
+        { "title": "Balls per Hopper", "type": "select", "code": "ballsPerHopper",
           "choices": {
-            "<10": "< 10",
-            "11-20": "11 - 20",
-            "21-30": "21 - 30",
-            "31-40": "31 - 40",
-            ">40": "> 40"
+            "<10": "<10",
+            "11-20": "11-20",
+            "21-30": "21-30",
+            "31-40": "31-40",
+            "41-50": "41-50",
+            ">50": ">50"
           }
         },
-        { "title": "Defensive Skill", "type": "range", "required": false, "code": "dr", "defaultValue": 3, "min": 1, "max": 5, "step": 1 },
-        { "title": "Died?", "type": "select", "required": false, "code": "died", "defaultValue": "", "choices": { "Com": "Communication Issues", "BrownOut": "Brown Out", "Disabled": "Mechanical Disabled" } },
-        { "title": "Yellow/Red Card", "type": "select", "required": true, "code": "yc", "defaultValue": "NoCard", "choices": { "NoCard": "No Card", "Yellow": "Yellow Card", "Red": "Red Card" } },
-        { "title": "Comments", "type": "text", "required": false, "code": "co", "defaultValue": "", "max": 50 }
+        { "title": "Defensive Skill", "type": "range", "code": "defSkill", "defaultValue": 3, "min": 1, "max": 5 },
+        { "title": "Defended?", "type": "boolean", "code": "defended", "defaultValue": false },
+        { "title": "Died?", "type": "select", "code": "died",
+          "choices": {
+            "No": "No",
+            "Com": "Communication Issues",
+            "Brown": "Brown Out",
+            "Disabled": "Mechanical Disabled"
+          }
+        },
+        { "title": "Beached on Fuel", "type": "boolean", "code": "beachedFuel", "defaultValue": false },
+        { "title": "Beached on Bump", "type": "boolean", "code": "beachedBump", "defaultValue": false },
+        { "title": "Yellow / Red Card", "type": "select", "code": "card",
+          "choices": {
+            "None": "No Card",
+            "Yellow": "Yellow",
+            "Red": "Red"
+          }
+        },
+        { "title": "Comments", "type": "text", "code": "comments", "defaultValue": "" }
       ]
     }
 
